--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>大事件</title>
     <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
     <link rel="stylesheet" href="/assets/fonts/iconfont.css" />
     <link rel="stylesheet" href="/assets/css/index.css" />
@@ -59,17 +59,17 @@
               >
               <dl class="layui-nav-child">
                 <dd>
-                  <a href="javascript:;"
+                  <a href="/article/art_cate.html" target="fm"
                     ><i class="layui-icon layui-icon-app"></i>文章类别</a
                   >
                 </dd>
-                <dd>
-                  <a href="javascript:;"
+                <dd class="art_list">
+                  <a href="/article/art_list.html" target="fm"
                     ><i class="layui-icon layui-icon-app"></i>文章列表</a
                   >
                 </dd>
                 <dd>
-                  <a href="javascript:;"
+                  <a href="/article/art_pub.html" target="fm"
                     ><i class="layui-icon layui-icon-app"></i>发布文章</a
                   >
                 </dd>
